# dispatch_model

./: README.md  pyproject.toml  test_manifest.py
dispatch_model/: __init__.py  dispatch_model.py
dispatch_model/pydantic/v1/: __init__.py  models.py
dispatch_model/pydantic/v2/: models.py
manifests/: bad_v1.yaml  good_v1.yaml  good_v2.yaml
