[project]
name = "dispatch_model"
version = "0.0.1"
description = "A package for dynamically dispatching Pydantic models based on apiVersion"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0",
    "pyyaml"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

